# timer

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.py
simpletimer/: __init__.py  timer.py
src/pytimer/: __init__.py  __main__.py  command_runner.py  pytimer.py
