[tool.poetry]
name = "timer"
version = "0.1.0"
description = ""
authors = ["Youngmin Kim <ymkim92@gmail.com>"]
license = "MIT"

packages = [
    { include = "simpletimer" },
]

[tool.poetry.scripts]
pytimer = "simpletimer.timer:pytimer"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
